--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "agontuk/schema-builder",
+    "name": "macromindonline/schema-builder",
     "description": "Schema designer & migration generator for laravel & lumen",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "type": "library",
     "keywords": [
         "schema",
@@ -22,9 +22,9 @@
     ],
     "require": {
         "ext-zip": "*",
-        "illuminate/filesystem": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
-        "illuminate/http": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
+        "illuminate/filesystem": "5.1.*|5.2.*|5.3.*|5.4.*|5.6.*|5.5.*|5.7.*|5.8.*",
+        "illuminate/http": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.5.*|5.7.*|5.8.*",
+        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.6.*|5.5.*|5.7.*|5.8.*",
         "league/flysystem": "^1.0",
         "league/flysystem-ziparchive": "^1.0"
     },
